--- a/hw2/docs/problems/problem1.tex
+++ b/hw2/docs/problems/problem1.tex
@@ -127,7 +127,7 @@
    
    \newpage
    \section{Computational Complexity}
-   Before going into the complexity analysis, I want to first note that \cite{labook} states that a Full Householder QR factorization of some matrix $A \in \mathbb{R}^{m \times n}$ is $O(m^2n)$. Additionally, I will use the $n$-Truncated R-SVD such that for some matrix $A \in \mathbb{R}^{m \times n}$ where $m \geq n$, the complexity is $O(mn^2)$. For use in analyzing the Interpolative Decomposition (ID), most of the heavy lifting of ID is based on the Column Pivoted QR Algorithm with complexity $O(mnk)$ for a matrix $A \in \mathbb{R}^{m \times n}$ that is rank $k$. These complexities will be used to describe the algorithms below.
+   Before going into the complexity analysis, I want to first note that \cite{labook} states that a Full Householder QR factorization of some matrix $A \in \mathbb{R}^{m \times n}$ is $O(m^2n)$. Additionally, I will use the $n$-Truncated R-SVD such that for some matrix $A \in \mathbb{R}^{m \times n}$ where $m \geq n$, the complexity is $O(mn^2)$. For use in analyzing the Interpolative Decomposition (ID), most of the heavy lifting of ID is based on the RRQR Algorithm with complexity $O(mnk)$ for a matrix $A \in \mathbb{R}^{m \times n}$ that is rank $k$. These complexities will be used to describe the algorithms below.
    
    \subsection{Algorithm 1 - Baseline}
    \begin{enumerate}
@@ -207,20 +207,14 @@ So what is interesting to note between the algorithms is they are both of comple
    \begin{enumerate}
    \item Construct random matrix $\Omega \in \mathbb{R}^{n \times k} \rightarrow O(nk)$
    \item Get measurements from $A$ by doing $Y = A\Omega \rightarrow O(mnk)$
-   \item Perform $l$ iterations of the following based on the Power Iteration:
-   		\begin{itemize}
-   		\item Perform QR of $Y \ni Y = \hat{Q} \hat{R} \rightarrow O(m^2k)$
-   		\item Perform QR of $T = A^T \hat{Q}_{(:,1:k)}  \ni T = \bar{Q}\bar{R} \rightarrow O(mnk + n^2k)$
-   		\item Perform $Y = A \bar{Q}_{(:,1:k)} \rightarrow O(nmk)$
-   		\end{itemize}
-   \item Perform QR of $Y \ni Y = \hat{Q} \hat{R} \rightarrow O(m^2k)$
-   \item Return $Q = \hat{Q}_{(:,1:k)} \rightarrow O(mk)$
+   \item Perform RRQR of $Y \ni Y = QR \rightarrow O(mk^2)$
+   \item Return $Q$
    \end{enumerate}
    
-   The overall complexity of the Non-adaptive Range Finder is $O(m^2 k)$ since this is the dominant complexity term throughout the algorithm. We can see here that this nominal Non-Adaptive Range Finder is slower than the approximate SVD computation algorithms described above by a factor of $m$ which is taken as being large.
+   Using the above steps, given $l \ll k$, we can produce an estimate for $Q$ such that $A \approx QQ^TA$ in $O(m n k)$. We can see the main weak point is the matrix multiplication against $A$ in step 2. We can also see that this nominal Non-Adaptive Range Finder is slower than the approximate SVD computation algorithms described above by a factor of $\frac{n}{k}$.
    
    \subsection{Subsampled Random Fourier Transform Non-Adaptive Range Finder}
-   This SRFT Range Finder is based on algorithms described in \cite{fdft} that allow one to speed up the nominal FFT and inverse FFT computations when you only care about either a subset of inputs points or a subset of output points. That said, I do not see how we can use this to speed up the computation of $Y = A\Omega^{'}$, where $\Omega^{'}$ is defined as:
+   This SRFT Range Finder is based on algorithms described in \cite{fdft} that allow one to speed up the nominal FFT and inverse FFT computations when you only care about either a subset of inputs points or a subset of output points. Using this paper, I believe we are able to compute $M \Omega^{'}$ for $M \in \mathbb{C}^{m \times n}$ and $\Omega^{'} \in \mathbb{C}^{n \times k}$ in $O( m n \log(k))$ where $\Omega^{'}$ is defined as:
    
    \begin{align*}
    \Omega^{'} &= \sqrt{\frac{n}{k}} D F R
@@ -233,6 +227,17 @@ So what is interesting to note between the algorithms is they are both of comple
    \item $F$ is the unitary $n \times n$ DFT matrix based on the relationship \\ $$F_{pq} = \frac{1}{\sqrt{n}} e^{-2\pi i (p-1) (q-1) / n}$$
    \item $R$ is an $n\times k$ matrix that samples $k$ coordinates from $n$ uniformly at random, i.e., its $k$ columns are drawn randomly without replacement from the columns of the $n\times n$ identity matrix
    \end{itemize}
+   
+   With this, we construct the following steps:
+   
+   \begin{enumerate}
+   \item Construct random matrix $\Omega^{'} \in \mathbb{R}^{n \times k} \rightarrow O(nk)$
+   \item Get measurements from $A$ by doing $Y = A\Omega^{'} \rightarrow O(mn \log{k} )$
+   \item Perform RRQR of $Y \ni Y = QR \rightarrow O(mk^2)$
+   \item Return $Q$
+   \end{enumerate}
+   
+   Using the above steps, we can produce an estimate for $Q$ such that $A \approx QQ^TA$ in $O(m n \log(k))$. This SRFT algorithm obviously improves upon the Nominal Range Finder algorithm, though still slower than construction of the approximate SVD of $A$ once we have $Q$.
    
    \newpage
    \section{Prove One Statement is True}
