--- a/hw2/docs/problems/problem1.tex
+++ b/hw2/docs/problems/problem1.tex
@@ -207,14 +207,14 @@ So what is interesting to note between the algorithms is they are both of comple
    \begin{enumerate}
    \item Construct random matrix $\Omega \in \mathbb{R}^{n \times k} \rightarrow O(nk)$
    \item Get measurements from $A$ by doing $Y = A\Omega \rightarrow O(mnk)$
-   \item Perform RRQR of $Y \ni Y = QR \rightarrow O(mk^2)$
+   \item Perform QR of $Y \ni Y = QR \rightarrow O(mk^2)$
    \item Return $Q$
    \end{enumerate}
    
    Using the above steps, given $l \ll k$, we can produce an estimate for $Q$ such that $A \approx QQ^TA$ in $O(m n k)$. We can see the main weak point is the matrix multiplication against $A$ in step 2. We can also see that this nominal Non-Adaptive Range Finder is slower than the approximate SVD computation algorithms described above by a factor of $\frac{n}{k}$.
    
    \subsection{Subsampled Random Fourier Transform Non-Adaptive Range Finder}
-   This SRFT Range Finder is based on algorithms described in \cite{fdft} that allow one to speed up the nominal FFT and inverse FFT computations when you only care about either a subset of inputs points or a subset of output points. Using this paper, I believe we are able to compute $M \Omega^{'}$ for $M \in \mathbb{C}^{m \times n}$ and $\Omega^{'} \in \mathbb{C}^{n \times k}$ in $O( m n \log(k))$ where $\Omega^{'}$ is defined as:
+   This SRFT Range Finder is based on algorithms described in \cite{fdft} that allow one to speed up the nominal FFT and inverse FFT computations when you only care about either a subset of inputs points or a subset of output points. Using this paper, we can compute $M \Omega^{'}$ for $M \in \mathbb{C}^{m \times n}$ and $\Omega^{'} \in \mathbb{C}^{n \times k}$ in $O( m n \log(k))$ where $\Omega^{'}$ is defined as:
    
    \begin{align*}
    \Omega^{'} &= \sqrt{\frac{n}{k}} D F R
@@ -228,12 +228,18 @@ So what is interesting to note between the algorithms is they are both of comple
    \item $R$ is an $n\times k$ matrix that samples $k$ coordinates from $n$ uniformly at random, i.e., its $k$ columns are drawn randomly without replacement from the columns of the $n\times n$ identity matrix
    \end{itemize}
    
+   This sped up matrix multiplication against $M$ can be done in the following steps:
+   \begin{enumerate}
+   \item Compute $\hat{M} = \sqrt{\frac{n}{k}}MD \rightarrow O(mn)$
+   \item Compute $Y = \hat{M} F R$ using the Transform Decomposition such that we only generate $k$ terms, corresponding to the nonzero $k$ columns $R$ would produce, based on $m$ rows from $\hat{M} \rightarrow O(mn\log(k))$
+   \end{enumerate}
+   
    With this, we construct the following steps:
    
    \begin{enumerate}
-   \item Construct random matrix $\Omega^{'} \in \mathbb{R}^{n \times k} \rightarrow O(nk)$
-   \item Get measurements from $A$ by doing $Y = A\Omega^{'} \rightarrow O(mn \log{k} )$
-   \item Perform RRQR of $Y \ni Y = QR \rightarrow O(mk^2)$
+   \item Construct matrices $D$ and $R$ minimally $\rightarrow O(n + k)$
+   \item Get measurements from $A$ by performing Transform Decomposition based algorithm using $\Omega^{'}$ such that $Y = A\Omega^{'} \rightarrow O(mn \log{k} )$
+   \item Perform QR of $Y \ni Y = QR \rightarrow O(mk^2)$
    \item Return $Q$
    \end{enumerate}
    
