--- a/hw2/docs/problems/problem1.tex
+++ b/hw2/docs/problems/problem1.tex
@@ -203,7 +203,11 @@ So what is interesting to note between the algorithms is they are both of comple
    
    \newpage
    \section{ Complexity of Finding Low-rank Projection Matrix }
+   In this problem, we are tasked to come up with algorithms and complexity estimates for two Range Finding algorithms that wish to find a $k$-rank projection matrix $Q$ such that an input matrix $A \approx Q Q^T A$. The two algorithms we need to investigate mainly differ based on their tools to get measurement vectors from $A$'s column space. The first algorithm, which I call the Nominal Non-Adaptive Range Finder, uses random vectors $\lbrace \omega_i \rbrace_{i=1}^k$ to sample $A$'s column space where each vector element is sampled from $\mathcal{N}(0,1)$, i.e. a zero mean and unit variance Normal distribution. The latter algorithm uses a Subsampled Random Fourier Transform method to obtain measurements more efficiently than in the nominal case. With that said, let us proceed with the algorithm descriptions.
+   
    \subsection{Nominal Non-Adaptive Range Finder}
+   With this algorithm, the steps are pretty straight forward to get a $k$-rank matrix $Q$ that approximates $A$'s column space.
+   
    \begin{enumerate}
    \item Construct random matrix $\Omega \in \mathbb{R}^{n \times k} \rightarrow O(nk)$
    \item Get measurements from $A$ by doing $Y = A\Omega \rightarrow O(mnk)$
@@ -211,7 +215,7 @@ So what is interesting to note between the algorithms is they are both of comple
    \item Return $Q$
    \end{enumerate}
    
-   Using the above steps, given $l \ll k$, we can produce an estimate for $Q$ such that $A \approx QQ^TA$ in $O(m n k)$. We can see the main weak point is the matrix multiplication against $A$ in step 2. We can also see that this nominal Non-Adaptive Range Finder is slower than the approximate SVD computation algorithms described above by a factor of $\frac{n}{k}$.
+   Using the above steps we can produce an estimate for $Q$ such that $A \approx QQ^TA$ in $O(m n k)$. We can see the main weak point is the matrix multiplication against $A$ in step 2. We can also see that this nominal Non-Adaptive Range Finder is slower than the approximate SVD computation algorithms described above by a factor of $\frac{n}{k}$.
    
    \subsection{Subsampled Random Fourier Transform Non-Adaptive Range Finder}
    This SRFT Range Finder is based on algorithms described in \cite{fdft} that allow one to speed up the nominal FFT and inverse FFT computations when you only care about either a subset of inputs points or a subset of output points. Using this paper, we can compute $M \Omega^{'}$ for $M \in \mathbb{C}^{m \times n}$ and $\Omega^{'} \in \mathbb{C}^{n \times k}$ in $O( m n \log(k))$ where $\Omega^{'}$ is defined as:
